k8s/dev/ratings-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-ratings-dev
  namespace: student20-bookinfo-dev
  labels:
    app: bookinfo-ratings-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookinfo-ratings-dev
  template:
    metadata:
      labels:
        app: bookinfo-ratings-dev
    spec:
      containers:
      - name: bookinfo-ratings-dev
        image: ghcr.io/yanika44/bookinfo-ratings:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: web-port
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
      imagePullSecrets:
      - name: registry-github
