k8s/dev/ratings-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-ratings-dev
  namespace: student67-bookinfo-dev
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: bookinfo-ratings-dev
