k8s/dev/ratings-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: bookinfo-ratings-dev
  namespace: student20-bookinfo-dev
spec:
  rules:
  - host: bookinfo.dev.opsta.net
    http:
      paths:
      - path: /student20/ratings(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: bookinfo-ratings-dev
            port:
              number: 80
